I added all the images for everyone involved in the BW and have to began to add the CSS styles for the landing page.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -4,8 +4,8 @@
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta charset="UTF-8">
             <title>How-To Team</title>
-            <link rel="stylesheet" type="text/css" href="CSS/about.css">
-            <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway">
+            <link rel="stylesheet" type="text/css" href="../CSS/about.css">
+            <!-- <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway"> -->
         </head>
         <body>
             <header>
@@ -19,61 +19,68 @@
             </header>
             <section class="Team">
                 <div  class="mem1">
-                    <img src="" alt="nikolai">
+                    <img src="../images/Nikolai-Lvov.png" alt="Nikolai Lvov UI Developer" width="200" height="200">
                     <h3>Nikolai Lvov</h3>
                     <h4>UI Developer</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="">Github</a>
+                    <a href="https://github.com/nikolvov">Github</a>
                 </div>
                 <div  class="mem2">
-                    <img src="" alt="noah">
+                    <img src="../images/Noah-Niesen.jpeg" alt="Noah Niesen Frontend Developer"  width="200" height="200">
                     <h3>Noah Niesen</h3>
                     <h4>Frontend Developer</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="">Github</a>
+                    <a href="https://github.com/noahn84">Github</a>
                 </div>
                 <div  class="mem3">
-                    <img src="" alt="bruno">
-                    <h3>Mohammad Miah</h3>
+                    <img src="../images/Bruno-Paula.jpeg" alt="Bruno Paula Frontend Developer" width="200" height="200">
+                    <h3>Bruno Paula</h3>
                     <h4>Frontend Developer</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="">Github</a>
+                    <a href="https://github.com/devbrunopaula">Github</a>
                 </div>
                 <div  class="mem4">
-                    <img src="" alt="Aaron">
-                    <h3>Aaron</h3>
+                    <img src="../images/Aaron-Mendez.jpeg" alt="Aaron Mendez Backend Developer" width="200" height="200">
+                    <h3>Aaron Mendez</h3>
                     <h4>Backend Developer</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="">Github</a>
+                    <a href="https://github.com/Aaron-Lamb">Github</a>
                 </div>
                 <div  class="mem5">
-                    <img src="" alt="Ashley">
+                    <img src="../images/Ashley-Dunham.jpeg" alt="Ashley Dunham Backend Developer" width="200" height="200">
                     <h3>Ashley Dunham</h3>
                     <h4>Backend Developer</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="">Github</a>
+                    <a href="https://github.com/xenocide21">Github</a>
                 </div>
                 <div  class="mem6">
-                    <img src="" alt="Altyn">
+                    <img src="../images/Altyn-Berdiyeva.jpeg" alt="Altyn Berdiyeva Backend Developer" width="200" height="200">
                     <h3>Altyn Berdiyeva</h3>
+                    <h4>Backend Developer</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="https://github.com/berdiyeva">Github</a>
+                </div>
+                <div  class="mem7">
+                    <img src="../images/Julian-Cole.jpeg" alt="Julian Cole Backend Developer" width="200" height="200">
+                    <h3>Julian cole</h3>
                     <h4>Backend Developer</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a href="">Github</a>
                 </div>
-                <div  class="mem7">
-                    <img src="" alt="Brendan">
-                    <h3>Brendan  Schatz</h3>
+                <div  class="mem8">
+                    <img src="../images/Brendan-Schatz.jpeg" alt="Brendan Schatz Project Lead" width="200" height="200">
+                    <h3>Brendan Schatz</h3>
                     <h4>Project Lead</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="">Github</a>
+                    <a href="https://github.com/bschatzj">Github</a>
                 </div>
             </section>
             <footer>
                 <h3>Follow our social medias for updates and exciting news!</h3>
                 <div class ="socials">
-                    <img src="images/brands-and-logotypes 1.png" alt="fb" width=""  height="">
-                    <img src="images/brands-and-logotypes (2) 1.png" alt="ig" width=""  height="">
-                    <img src="images/logo 1.png" alt="twitter" width=""  height="">
+                    <img src="images/brands-and-logotypes 1.png" alt="fb" width="100"  height="100">
+                    <img src="images/brands-and-logotypes (2) 1.png" alt="ig" width="100"  height="100">
+                    <img src="images/logo 1.png" alt="twitter" width="100"  height="100">
                     <p>2020 How-To Rights Reserved</p>
                 </div>
             </footer>
