--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,8 @@
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta charset="UTF-8">
             <title>How-To</title>
-            <link rel="stylesheet" type="text/css" href="CSS/index.css">
-            <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway">
+            <link rel="stylesheet" href="../CSS/index.css">
+            <!-- <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway"> -->
         </head>
 
         <body>
@@ -18,22 +18,22 @@
                     <a href = "">Sign Up</a>
                 </nav>
                 <h2>Have a life hack? Share it on how-to</h2>
-                <h3>Posts with the most likes / reviews will be at the top of the feed, simplifying life for everyone.</h3>
+                <p>Posts with the most likes / reviews will be at the top of the feed, simplifying life for everyone.</p>
             </header>
 
             <section class="middle-section">
-                <h2>Innovate, Admire, and Explore.</h2>
-                <h3><strong>Create and share</strong> your life hacks with the world</h3>
-                <h3><strong>Get feedback</strong> on your how-to guides</h3>
-                <h3><strong>Discover</strong> your new favorite maxim</h3>
+                <h3>Innovate, Admire, and Explore.</h3>
+                <p><strong>Create and share</strong> your life hacks with the world</p>
+                <p><strong>Get feedback</strong> on your how-to guides</p>
+                <p><strong>Discover</strong> your new favorite maxim</p>
             </section>
 
             <footer>
-                <h3>Follow our social medias for updates and exciting news!</h3>
+                <h4>Follow our social medias for updates and exciting news!</h4>
                 <div class ="socials">
-                    <img src="images/brands-and-logotypes 1.png" alt="fb" width=""  height="">
-                    <img src="images/brands-and-logotypes (2) 1.png" alt="ig" width=""  height="">
-                    <img src="images/logo 1.png" alt="twitter" width=""  height="">
+                    <img src="../images/brands-and-logotypes 1.png" alt="fb" width="100"  height="100">
+                    <img src="../images/brands-and-logotypes (2) 1.png" alt="ig" width="100"  height="100">
+                    <img src="../images/logo 1.png" alt="twitter" width="100"  height="100">
                     <p>2020 How-To Rights Reserved</p>
                 </div>
             </footer>
