I created the landing, about and features pages and went labeled all HTML semantically. I styled the CSS for all three pages for desktop size. I've started responsive design for the landing page.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,31 +10,27 @@
 
         <body>
             <header>
-                <h1>HOW2</h1>
+                <h1><a href="index.html">HOW2</h1></a>
                 <nav>
-                    <a href = "">Features</a>
+                    <a href = "features.html">Features</a>
                     <a href = "about.html">Team</a>
                     <a href = "">Login</a>
                     <a href = "">Sign Up</a>
                 </nav>
-                <h2>Have a life hack? Share it on how-to</h2>
-                <p>Posts with the most likes / reviews will be at the top of the feed, simplifying life for everyone.</p>
             </header>
 
-            <section class="middle-section">
-                <h3>Innovate, Admire, and Explore.</h3>
-                <p><strong>Create and share</strong> your life hacks with the world</p>
-                <p><strong>Get feedback</strong> on your how-to guides</p>
-                <p><strong>Discover</strong> your new favorite maxim</p>
+            <section class = how-to-info>
+                <h2>Have a life hack? Share it on HOW2</h2>
+                <p>Posts with the most likes / reviews will be at the top of the feed, simplifying life for everyone.</p>
             </section>
 
             <footer>
                 <h4>Follow our social medias for updates and exciting news!</h4>
                 <div class ="socials">
-                    <img src="../images/brands-and-logotypes 1.png" alt="fb" width="100"  height="100">
-                    <img src="../images/brands-and-logotypes (2) 1.png" alt="ig" width="100"  height="100">
-                    <img src="../images/logo 1.png" alt="twitter" width="100"  height="100">
-                    <p>2020 How-To Rights Reserved</p>
+                    <img src="../images/brands-and-logotypes 1.png" alt="fb" width="50"  height="50">
+                    <img src="../images/brands-and-logotypes (2) 1.png" alt="ig" width="50"  height="50">
+                    <img src="../images/logo 1.png" alt="twitter" width="50"  height="50">
+                    <h5>2020 How-To Rights Reserved</h5>
                 </div>
             </footer>
         </body>
