I updated the media queries for all three pages.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -9,62 +9,81 @@
 
         <body>
             <header>
-                <h1><a href="index.html">HOW2</h1></a>
+                <div class="title">
+                    <h1><a href="index.html">HOW2</a></h1>
+                </div>
                 <nav>
-                    <a href = "features.html">Features</a>
-                    <a href = "about.html" class="team">Team</a>
-                    <a href = "">Login</a>
-                    <a href = "">Sign Up</a>
+                    <a href = "features.html">Features </a>
+                    <a href = "about.html" class="about">Team </a>
+                    <a href = "">Login </a>
+                    <a href = "">Sign Up </a>
                 </nav>
             </header>
+
             <section class="members">
                 <div  class="mem1">
                     <h3>Nikolai Lvov</h3>
                     <img src="../images/Nikolai-Lvov.png" alt="Nikolai Lvov UI Developer" width="150" height="150">
                     <h4>UI Developer</h4>
-                    <button><a href="https://github.com/nikolvov">Github</a></button>
+                    <div class="button">
+                        <button><a href="https://github.com/nikolvov">Github</a></button>
+                    </div>
                 </div>
                 <div  class="mem2">
                     <h3>Noah Niesen</h3>
                     <img src="../images/Noah-Niesen.jpeg" alt="Noah Niesen Frontend Developer"  width="150" height="150">
                     <h4>Frontend Developer</h4>
-                    <a href="https://github.com/noahn84">Github</a>
+                    <div class="button">
+                        <button><a href="https://github.com/noahn84">Github</a></button>
+                    </div>
                 </div>
                 <div  class="mem3">
                     <h3>Bruno Paula</h3>
                     <img src="../images/Bruno-Paula.jpeg" alt="Bruno Paula Frontend Developer" width="150" height="150">
                     <h4>Frontend Developer</h4>
-                    <a href="https://github.com/devbrunopaula">Github</a>
+                    <div class="button">
+                        <button><a href="https://github.com/devbrunopaula">Github</a></button>
+                    </div>
                 </div>
                 <div  class="mem4">
                     <h3>Aaron Mendez</h3>
                     <img src="../images/Aaron-Mendez.jpeg" alt="Aaron Mendez Backend Developer" width="150" height="150">
                     <h4>Backend Developer</h4>
-                    <a href="https://github.com/Aaron-Lamb">Github</a>
+                    <div class="button">
+                        <button><a href="https://github.com/Aaron-Lamb">Github</a></button>
+                    </div>
                 </div>
                 <div  class="mem5">
                     <h3>Ashley Dunham</h3>
                     <img src="../images/Ashley-Dunham.jpeg" alt="Ashley Dunham Backend Developer" width="150" height="150">
                     <h4>Backend Developer</h4>
-                    <a href="https://github.com/xenocide21">Github</a>
+                    <div class="button">
+                        <button><a href="https://github.com/xenocide21">Github</a></button>
+                    </div>
                 </div>
                 <div  class="mem6">
                     <h3>Altyn Berdiyeva</h3>
                     <img src="../images/Altyn-Berdiyeva.jpeg" alt="Altyn Berdiyeva Backend Developer" width="150" height="150">
                     <h4>Backend Developer</h4>
-                    <a href="https://github.com/berdiyeva">Github</a>
+                    <div class="button">
+                        <button><a href="https://github.com/berdiyeva">Github</a></button>
+                    </div>
                 </div>
                 <div  class="mem7">
                     <h3>Julian cole</h3>
                     <img src="../images/Julian-Cole.jpeg" alt="Julian Cole Backend Developer" width="150" height="150">
                     <h4>Backend Developer</h4>
-                    <a href="https://github.com/Julianisrel">Github</a>
+                    <div class="button">
+                        <button><a href="https://github.com/Julianisrel">Github</a></button>
+                    </div>
                 </div>
                 <div  class="mem8">
                     <h3>Brendan Schatz</h3>
                     <img src="../images/Brendan-Schatz.jpeg" alt="Brendan Schatz Project Lead" width="150" height="150">
                     <h4>Project Lead</h4>
-                    <a href="https://github.com/bschatzj">Github</a>
+                    <div class="button">
+                        <button><a href="https://github.com/bschatzj">Github</a></button>
+                    </div>
                 </div>
             </section>
         </body>
