--- a/HTML/features.html
+++ b/HTML/features.html
@@ -9,12 +9,14 @@
 
         <body>
             <header>
-                <h1><a href="index.html">HOW2</h1></a>
+                <div class="title">
+                    <h1><a href="index.html">HOW2</a></h1>
+                </div>
                 <nav>
-                    <a href = "features.html" class="features">Features</a>
-                    <a href = "about.html" class="team">Team</a>
-                    <a href = "" class="login">Login</a>
-                    <a href = "" class="sign-up">Sign Up</a>
+                    <a href = "features.html" class="features">Features </a>
+                    <a href = "about.html" class=>Team </a>
+                    <a href = "" class=>Login </a>
+                    <a href = "" class=>Sign Up </a>
                 </nav>
             </header>
 
