--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,9 @@
 
         <body>
             <header>
-                <h1><a href="index.html">HOW2</h1></a>
+                <div class="title">
+                    <h1><a href="index.html">HOW2</a></h1>
+                </div>
                 <nav>
                     <a href = "features.html">Features</a>
                     <a href = "about.html">Team</a>
