--- a/HTML/about.html
+++ b/HTML/about.html
@@ -21,7 +21,7 @@
             </header>
 
             <section class="members">
-                <div  class="mem1">
+                <div  class="mem">
                     <h3>Nikolai Lvov</h3>
                     <img src="../images/Nikolai-Lvov.png" alt="Nikolai Lvov UI Developer" width="150" height="150">
                     <h4>UI Developer</h4>
@@ -29,7 +29,7 @@
                         <button><a href="https://github.com/nikolvov">Github</a></button>
                     </div>
                 </div>
-                <div  class="mem2">
+                <div  class="mem">
                     <h3>Noah Niesen</h3>
                     <img src="../images/Noah-Niesen.jpeg" alt="Noah Niesen Frontend Developer"  width="150" height="150">
                     <h4>Frontend Developer</h4>
@@ -37,7 +37,7 @@
                         <button><a href="https://github.com/noahn84">Github</a></button>
                     </div>
                 </div>
-                <div  class="mem3">
+                <div  class="mem">
                     <h3>Bruno Paula</h3>
                     <img src="../images/Bruno-Paula.jpeg" alt="Bruno Paula Frontend Developer" width="150" height="150">
                     <h4>Frontend Developer</h4>
@@ -45,7 +45,7 @@
                         <button><a href="https://github.com/devbrunopaula">Github</a></button>
                     </div>
                 </div>
-                <div  class="mem4">
+                <div  class="mem">
                     <h3>Aaron Mendez</h3>
                     <img src="../images/Aaron-Mendez.jpeg" alt="Aaron Mendez Backend Developer" width="150" height="150">
                     <h4>Backend Developer</h4>
@@ -53,7 +53,7 @@
                         <button><a href="https://github.com/Aaron-Lamb">Github</a></button>
                     </div>
                 </div>
-                <div  class="mem5">
+                <div  class="mem">
                     <h3>Ashley Dunham</h3>
                     <img src="../images/Ashley-Dunham.jpeg" alt="Ashley Dunham Backend Developer" width="150" height="150">
                     <h4>Backend Developer</h4>
@@ -61,7 +61,7 @@
                         <button><a href="https://github.com/xenocide21">Github</a></button>
                     </div>
                 </div>
-                <div  class="mem6">
+                <div  class="mem">
                     <h3>Altyn Berdiyeva</h3>
                     <img src="../images/Altyn-Berdiyeva.jpeg" alt="Altyn Berdiyeva Backend Developer" width="150" height="150">
                     <h4>Backend Developer</h4>
@@ -69,7 +69,7 @@
                         <button><a href="https://github.com/berdiyeva">Github</a></button>
                     </div>
                 </div>
-                <div  class="mem7">
+                <div  class="mem">
                     <h3>Julian cole</h3>
                     <img src="../images/Julian-Cole.jpeg" alt="Julian Cole Backend Developer" width="150" height="150">
                     <h4>Backend Developer</h4>
@@ -77,7 +77,7 @@
                         <button><a href="https://github.com/Julianisrel">Github</a></button>
                     </div>
                 </div>
-                <div  class="mem8">
+                <div  class="mem">
                     <h3>Brendan Schatz</h3>
                     <img src="../images/Brendan-Schatz.jpeg" alt="Brendan Schatz Project Lead" width="150" height="150">
                     <h4>Project Lead</h4>
