--- a/HTML/features.html
+++ b/HTML/features.html
@@ -13,17 +13,17 @@
                     <h1><a href="index.html">HOW2</a></h1>
                 </div>
                 <nav>
-                    <a href = "features.html" class="features">Features </a>
-                    <a href = "about.html" class=>Team </a>
-                    <a href = "" class=>Login </a>
-                    <a href = "" class=>Sign Up </a>
+                    <a href = "features.html" class="features">Features</a>
+                    <a href = "about.html">Team</a>
+                    <a href = "">Login</a>
+                    <a href = "">Sign Up</a>
                 </nav>
             </header>
 
             <section class="middle-section">
                 <h2>Innovate, Admire, and Explore.</h2>
-                <p><strong>Create and share</strong> your life hacks with the world</p>
-                <p><strong>Get feedback</strong> on your how-to guides</p>
-                <p><strong>Discover</strong> your new favorite maxim</p>
+                <p>Create and share your life hacks with the world</p>
+                <p>Get feedback on your how-to guides</p>
+                <p>Discover your new favorite maxim</p>
             </section>
         </body>
