--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
                 <nav>
                     <a href = "features.html">Features</a>
                     <a href = "about.html">Team</a>
-                    <a href = "">Login</a>
+                    <a href = "https://howtoapp2.netlify.app/">Login</a>
                     <a href = "">Sign Up</a>
                 </nav>
             </header>
