Added netlify link to other two pages.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -15,7 +15,7 @@
                 <nav>
                     <a href = "features.html">Features</a>
                     <a href = "about.html" class="about">Team</a>
-                    <a href = "">Login</a>
+                    <a href = "https://howtoapp2.netlify.app/">Login</a>
                     <a href = "">Sign Up</a>
                 </nav>
             </header>
