--- a/HTML/features.html
+++ b/HTML/features.html
@@ -15,7 +15,7 @@
                 <nav>
                     <a href = "features.html" class="features">Features</a>
                     <a href = "about.html">Team</a>
-                    <a href = "">Login</a>
+                    <a href = "https://howtoapp2.netlify.app/">Login</a>
                     <a href = "">Sign Up</a>
                 </nav>
             </header>
